@@ -13,6 +13,7 @@ export(draw_sound)
 export(eaf_to_df)
 export(exb_to_df)
 export(extract_intervals)
+export(flextext_to_df)
 export(get_textgrid_names)
 export(rename_soundfiles)
 export(rename_videofiles)
